remove ServiceAccount based JWT token endpoints and setup
